--- a/test_editor.html
+++ b/test_editor.html
@@ -82,7 +82,7 @@ auto on</textarea>
         <div id="results"></div>
     </div>
 
-    <script src="code_interpreter.js"></script>
+    <script src="test_editor.js"></script>
     <script>
         // 模拟游戏对象
         class MockGame {
