算法可视化和物理模拟改造

--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
     <script src="gamify_editor.js"></script>
     <script src="drag_blocks.js"></script>
     <script src="progress_system.js"></script>
+    <script src="game_canvas.js"></script>
+    <script src="algorithm_visualizer.js"></script>
+    <script src="physics_simulator.js"></script>
     <script>
         let currentInterpreter = null;
         let gameState = {};
