--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
     <script src="game_canvas.js"></script>
     <script src="algorithm_visualizer.js"></script>
     <script src="physics_simulator.js"></script>
+    <script src="datastructure_visualizer.js"></script>
+    <script src="math_visualizer.js"></script>
     <script>
         let currentInterpreter = null;
         let gameState = {};
